Details
-
Bug
-
Resolution: Fixed
-
Blocker
-
None
-
July 2017
Description
The ext2fs driver doesn't have support for filesystems with 64bit flags. Unfortunately, it seems that at the very least Debian always creates such filesystems on installation even on much smaller disks, apparently in anticipation of possible future resize.
The upstream patch exists; attached adapted to the ReactOS tree.
Attachments
Issue Links
- blocks
-
CORE-13980 Update Ext2Fsd to version 0.69 from version 0.68
-
- Resolved
-