[EXT2] Import commits by Kaho Ng <ngkaho1234@gmail.com> from upstream: - b7657e5 Ext3Fsd: Introduce VCB_RO_COMPAT_READ_ONLY flag for struct VCB - e7c1142 Ext3Fsd: EXT4_FEATURE_INCOMPAT_64BIT is not supported - 785943f Ext3Fsd: fix issue #6

Refuse mounting filesystems with incompatible flags. This avoids corrupting 64bits filesystems.

Patch by Lubomir Rintel

CORE-13589

svn path=/trunk/; revision=75422